<?xml version="1.0"?>
<package format="2">
  <name>robot_driver</name>
  <version>1.0.9</version>
  <description>
    The robot_driver package
    1.0.9 add amcl carto support
    1.0.8 add odom calculate support
    1.0.7 fix stm32 serial bug
    1.0.6 add ultrasonic support
    1.0.5 fix autocharge bug
    1.0.4 update driver arch
    1.0.3 fix cmd_vel speed send missing
    1.0.2 Modify the bug: odom occ
    1.0.1 Added speed change parameter: speed_dwa

  </description>

  <maintainer email="spirit@todo.todo">spirit</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
